--- a/admin.html
+++ b/admin.html
@@ -1,113 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Admin Dashboard</title>
-<link rel="stylesheet" href="style.css">
+  <title>Admin Panel</title>
 </head>
 <body>
-<div id="loginBox" class="container">
   <h2>Admin Login</h2>
-  <input type="text" id="username" placeholder="Username"><br>
-  <input type="password" id="password" placeholder="Password"><br>
+  <input id="user" placeholder="Username">
+  <input id="pass" placeholder="Password" type="password">
   <button onclick="login()">Login</button>
-  <p id="loginMsg" style="color:red;"></p>
-</div>
-
-<div id="dashboard" class="container" style="display:none;">
-  <h2>Admin Dashboard</h2>
-  <button onclick="logout()">Logout</button>
-  <table id="requestsTable">
-    <thead>
-      <tr>
-        <th>Request ID</th>
-        <th>Customer</th>
-        <th>Service</th>
-        <th>Charges</th>
-        <th>Priority</th>
-        <th>Status</th>
-        <th>Engineer</th>
-        <th>Assign Engineer</th>
-        <th>Payment</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-</div>
+  <p id="status"></p>
+  <div id="dashboard"></div>
 
 <script>
-const API_URL = "https://script.google.com/macros/s/AKfycbzggyb9cWoZCoJwJo1__xN7GvNZdCCwDDTAPL-rg9JKF_zaGM-Dr70tZ-fqfeHAZ6WYyw/exec";
+const scriptURL = "https://script.google.com/macros/s/AKfycbzggyb9cWoZCoJwJo1__xN7GvNZdCCwDDTAPL-rg9JKF_zaGM-Dr70tZ-fqfeHAZ6WYyw/exec";
+let token = "";
 
-if(localStorage.getItem("adminToken")){
-  document.getElementById("loginBox").style.display="none";
-  document.getElementById("dashboard").style.display="block";
-  loadRequests();
+function login() {
+  fetch(scriptURL, {
+    method: "POST",
+    body: JSON.stringify({ action: "login", username: document.getElementById("user").value, password: document.getElementById("pass").value })
+  })
+  .then(res => res.json())
+  .then(data => {
+    if (data.success) {
+      token = data.token;
+      document.getElementById("status").innerText = "Login successful!";
+      loadRequests();
+    } else {
+      document.getElementById("status").innerText = "Login failed.";
+    }
+  });
 }
 
-function login(){
-  const user=document.getElementById("username").value;
-  const pass=document.getElementById("password").value;
-  fetch(API_URL,{
-    method:"POST",
-    body:JSON.stringify({action:"login",username:user,password:pass})
-  }).then(res=>res.json())
-    .then(data=>{
-      if(data.success){
-        localStorage.setItem("adminToken",data.token);
-        document.getElementById("loginBox").style.display="none";
-        document.getElementById("dashboard").style.display="block";
-        loadRequests();
-      }else{
-        document.getElementById("loginMsg").innerText="Invalid credentials";
-      }
-    });
-}
-
-function logout(){ localStorage.removeItem("adminToken"); location.reload(); }
-
-function loadRequests(){
-  const token=localStorage.getItem("adminToken");
-  fetch(API_URL+"?admin=true&token="+token)
-    .then(res=>res.json())
-    .then(data=>{
-      if(!data.success){ logout(); return; }
-      const tbody=document.querySelector("#requestsTable tbody");
-      tbody.innerHTML="";
-      data.requests.forEach(req=>{
-        let row=`
-          <tr>
-            <td>${req.requestId}</td>
-            <td>${req.customerName} <br> ${req.phone}</td>
-            <td>${req.service}</td>
-            <td>$${req.charges}</td>
-            <td>${req.priority}</td>
-            <td>${req.status}</td>
-            <td>${req.engineerName || "-"}</td>
-            <td>
-              <select id="eng-${req.requestId}">
-                <option value="">Select</option>
-                ${req.engineers.map(e=>`<option value="${e.id}">${e.name}</option>`).join("")}
-              </select>
-              <button onclick="assignEngineer('${req.requestId}')">Assign</button>
-            </td>
-            <td>${req.paymentStatus}</td>
-          </tr>
-        `;
-        tbody.innerHTML+=row;
+function loadRequests() {
+  fetch(scriptURL + "?admin=true&token=" + token)
+    .then(res => res.json())
+    .then(data => {
+      let html = "<h3>Requests</h3>";
+      data.requests.forEach(r => {
+        html += `<p>${r.requestId} | ${r.customerName} | ${r.service} | Status: ${r.status} | Engineer: ${r.engineerName || "None"}
+          <select id="eng-${r.requestId}">${data.engineers.map(e => `<option value="${e.id}">${e.name}</option>`)}</select>
+          <button onclick="assign('${r.requestId}')">Assign</button></p>`;
       });
+      document.getElementById("dashboard").innerHTML = html;
     });
 }
 
-function assignEngineer(reqId){
-  const engId=document.getElementById("eng-"+reqId).value;
-  const token=localStorage.getItem("adminToken");
-  if(!engId){ alert("Please select an engineer"); return; }
-  fetch(API_URL,{
-    method:"POST",
-    body:JSON.stringify({action:"assign",requestId:reqId,engineerId:engId,token:token})
-  }).then(res=>res.text())
-    .then(msg=>{ alert(msg); loadRequests(); });
+function assign(reqId) {
+  let engId = document.getElementById("eng-" + reqId).value;
+  let engName = document.getElementById("eng-" + reqId).selectedOptions[0].text;
+  fetch(scriptURL, {
+    method: "POST",
+    body: JSON.stringify({ action: "assign", token: token, requestId: reqId, engineerId: engId, engineerName: engName })
+  }).then(() => loadRequests());
 }
 </script>
 </body>
