--- a/index.html
+++ b/index.html
@@ -1,38 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Book Service</title>
+  <title>Service Booking</title>
+  <style>
+    body { font-family: Arial; margin: 40px; }
+    .success { color: green; margin-top: 20px; }
+  </style>
 </head>
 <body>
   <h2>Book a Service</h2>
   <form id="bookingForm">
-    <input type="text" name="name" placeholder="Your Name" required><br>
-    <input type="text" name="phone" placeholder="Phone" required><br>
-    <input type="email" name="email" placeholder="Email"><br>
-    <select name="service">
-      <option>AC Repair</option>
-      <option>Plumbing</option>
-      <option>Electrical</option>
-    </select><br>
+    <input type="text" id="name" placeholder="Your Name" required><br><br>
+    <input type="text" id="phone" placeholder="Phone Number" required><br><br>
+    <select id="service" required>
+      <option value="">Select Service</option>
+      <option value="AC Repair">AC Repair</option>
+      <option value="Plumbing">Plumbing</option>
+      <option value="Electrical">Electrical</option>
+    </select><br><br>
+    <select id="priority" required>
+      <option value="Normal">Normal</option>
+      <option value="Urgent">Urgent</option>
+    </select><br><br>
+    <input type="number" id="charges" placeholder="Charges ($)" required><br><br>
     <button type="submit">Submit</button>
   </form>
-  <p id="result"></p>
 
-<script>
-const scriptURL = "https://script.google.com/macros/s/AKfycbzggyb9cWoZCoJwJo1__xN7GvNZdCCwDDTAPL-rg9JKF_zaGM-Dr70tZ-fqfeHAZ6WYyw/exec";
-document.getElementById("bookingForm").addEventListener("submit", e => {
-  e.preventDefault();
-  fetch(scriptURL, {
-    method: "POST",
-    body: JSON.stringify(Object.fromEntries(new FormData(e.target)))
-  })
-  .then(res => res.json())
-  .then(data => {
-    document.getElementById("result").innerText = 
-      "Request submitted! Your ID: " + data.requestId + " | Charges: $" + data.charges;
-  });
-});
-</script>
+  <div id="result"></div>
+
+  <script>
+    const scriptURL = "https://script.google.com/macros/s/AKfycbzggyb9cWoZCoJwJo1__xN7GvNZdCCwDDTAPL-rg9JKF_zaGM-Dr70tZ-fqfeHAZ6WYyw/exec"; // Replace with Apps Script URL
+
+    document.getElementById("bookingForm").addEventListener("submit", function(e){
+      e.preventDefault();
+
+      let data = {
+        name: document.getElementById("name").value,
+        phone: document.getElementById("phone").value,
+        service: document.getElementById("service").value,
+        priority: document.getElementById("priority").value,
+        charges: document.getElementById("charges").value
+      };
+
+      fetch(scriptURL, {
+        method: "POST",
+        body: JSON.stringify(data)
+      })
+      .then(res => res.json())
+      .then(response => {
+        if(response.status === "success"){
+          document.getElementById("result").innerHTML = 
+            `<p class='success'>✅ ${response.message}<br>
+            Your Request ID: <b>${response.requestId}</b><br>
+            <a href="track.html?requestId=${response.requestId}">Track Request</a></p>`;
+        }
+      })
+      .catch(err => alert("Error: " + err));
+    });
+  </script>
 </body>
 </html>
-
